--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,7 +26,7 @@
     &-inner {
         position: relative;
         width: 460px;
-        min-height: 630px;
+        height: 630px;
         }
     &-large {
             min-height: 750px;
