--- a/src/sass/blocks/_leftBlock.scss
+++ b/src/sass/blocks/_leftBlock.scss
@@ -1,41 +1,45 @@
-
-.left-card {
-    display: flex;
-    align-items:center;
-    .title {
-        align-self: center;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 75px;
-        line-height: 75px;
-        color: $main-color;
-        margin-bottom: 0;
-    }
-}
-.information {
-    width: 100%;
-    &__wrapper {
-        margin-top: 55px;
-        display: grid;
-        grid-template: repeat(2, minmax(87px, 1fr)) / repeat(2, 205px);
-        row-gap: 25px;
-        column-gap: 50px;
-    }
-    &__inner {
+.container {
+    &__inner-left {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
-    &__img-wrapper {
+}
+.title {
+    font-weight: 600;
+    font-size: 75px;
+    line-height: 75px;
+    color: $main-color;
+}
+.info {
+    &__wrapper {
+        width: 100%;
+        height: 30%;
+        display: grid;
+        grid-template: repeat(2,1fr) / repeat(2, 1fr);
+        gap: 28px 50px;
+        margin-top: 55px;
+    }
+    &__inner{
+        display: flex;
+        flex-direction: column;
+        justify-content: stretch;
+    }
+    &__icon {
         width: 33px;
         height: 33px;
+        img {
+            width: 100%;
+        }
     }
     &__descr {
-        margin-top: 7px;
-        font-weight: 500;
         font-size: 15px;
+        line-height: 25px;
         color: $main-color;
-        opacity: .6;
+        opacity: 0.6;
         span {
+            display: block;
+            opacity: 1.0;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;  
@@ -45,50 +49,51 @@
 }
 .tech {
     &__wrapper {
-        margin-top: 35px;
+        margin-top: 45px;
     }
     &__title {
         font-weight: 600;
-        margin-bottom: 0;
         font-size: 30px;
-        opacity: 0.9;
         color: $main-color;
+        opacity: 0.9;
     }
-    &__wrapper-skills {
-        margin-top: 15px;
+    &__skills__wrapper {
         width: 100%;
+        display: flex;
+       align-items: stretch;
+    }
+    &__skills-inner {
+        width: 100%;
+        display: flex;
+        margin-top: 17px;
+        flex-direction: column;
     }
     &__descr {
-        color: $main-color;
-        margin: 0;
-        font-weight: 500;
         font-size: 15px;
+        line-height: 25px;
         color: $main-color;
         opacity: 0.8;
     }
-    &__inner-skill {
+    &__skill {
         position: relative;
         width: 100%;
         height: 7px;
-        margin-top: 5px;
         background: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        &_white {
+        span {
             position: absolute;
-            height: 7px;
-            background: #FFFFFF;
+            background:$main-color;
             border-radius: 10px;
-            width: 70%;
-            &-1 {
-                width: 50%;
-            }
-            &-2 {
-                width: 40%;
-            }
-            &-3 {
-                width: 77%;
-            }
+            height: 100%;
         }
-        
+        &_size-1 {
+            width: 50%;
+        }
+        &_size-2 {
+            width: 30%;
+        }
+        &_size-3 {
+            width: 70%;
+        }
     }
 }
