--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,33 +4,34 @@
 @import 'blocks/leftBlock';
 @import 'blocks/centralBlock';
 @import 'blocks/rightBlock';
-
-
-
-
+:root {
+    width: 100%;
+}
 * {
     font-family: 'Inter', sans-serif;
     margin: 0;
-    padding: 0;
+    
 }
 .card {
-    padding: 103px 0 115px 0;
+    padding: 5% 0 5% 0;
     background-color: black;
-    width: 1680px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    
 }
 .container {
-    width: 1475px;
-    display: flex;
-    justify-content: space-around;
+    width: 90%;
     margin: 0 auto;
-    &-inner {
-        position: relative;
-        width: 460px;
-        height: 630px;
-        }
-    &-large {
-            min-height: 750px;
+    display: grid;
+    grid-template: repeat(1,minmax(635px, auto) ) / repeat(3, 1fr);
+    column-gap: 3%;
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between
     }
-}
-    
+}   
+ 
 @import 'blocks/media';
