--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,3 +1,9 @@
+@media (min-width: 1201px) and (max-width: 1430px)  {
+    .title {
+        font-size: 63px;
+        line-height: 70px;
+    }  
+}
 @media (max-width: 1200px) {
     .container{
         &__inner-right{
@@ -11,72 +17,100 @@
     .title {
         font-size: 50px;
         line-height: 50px;
-    
+    }
+    .text {
+        &__descr {
+            font-size: 12px;
+            line-height: 19px;
+        
+        }
+        &_mt {
+            margin-top: 15px;
+        } 
     }
 }
 @media (max-width: 992px) {
-.title {
+    .container {
+        grid-template: 70% 30% / repeat(2, 1fr);
+        &__inner-central {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
+        &__inner-central {
+            width: 100%;
+            margin-top: 6%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            column-gap: 3%;  
+        }
+    }
+    .title {
     font-size: 40px;
     line-height: 40px;
-}
-.text {
-    &__title{
-        font-size: 23px;
     }
-    &__descr {
-        font-size: 12px;
-        line-height: 17px;
-    }
-}
-.img-descr {
-    bottom: 40px;
-    font-size: 17px;
-    line-height: 23px;
-
-}
-}
-@media (max-width: 768px) {
-.title {
-    font-size: 50px;
-}
-.container {
     .text {
-        margin-top: 5%;
-        &__title {
+        &__title{
             font-size: 23px;
         }
         &__descr {
-            font-size: 15px;
-            line-height: 26px;
+            font-size: 12px;
+            line-height: 17px;
+        } 
+        &_mt {
+            margin-top: 0;
         }
     }
-    display: block;
-    width: 100%;
-    &__inner {
-        width: 90%;
-        display: block;
-        margin: 0 auto;
-        &-central {
-            margin-top: 10%;
+    .info {
+        &__wrapper {
+            gap: 15px 24px;
         }
     }
-    &__inner-right {
-        margin-top: 5%;
-        min-height: 500px;
-        border-radius: 5%;
-        .img-descr {
-            position: absolute;
-            bottom: 83px;
-            text-align: center;
-            font-weight: 600;
-            font-size: 30px;
-            line-height: 35px;
-            color: $main-color;
-        }
+    .img-descr {
+        bottom: 40px;
+        font-size: 17px;
+        line-height: 23px;
     }
 }
-    
-   
+@media (max-width: 768px) {
+    .container {
+        display: block;
+        width: 100%;
+        .title {
+            font-size: 50px;
+        }
+        .text {
+            margin-top: 5%;
+            &__title {
+                font-size: 23px;
+            }
+            &__descr {
+                font-size: 15px;
+                line-height: 26px;
+            }
+        }
+        &__inner {
+            width: 90%;
+            display: block;
+            margin: 0 auto;
+            &-central {
+                margin-top: 10%;
+            }
+        }
+        &__inner-right {
+            margin-top: 5%;
+            min-height: 500px;
+            border-radius: 5%;
+            .img-descr {
+                position: absolute;
+                bottom: 83px;
+                text-align: center;
+                font-weight: 600;
+                font-size: 30px;
+                line-height: 35px;
+                color: $main-color;
+            }
+        }
+    }
 }
 @media (max-width: 576px) {
     .container{
@@ -90,9 +124,7 @@
                 line-height: 27px;
             }
         }
-    }
-    
-    
+    }  
 }
 
 
