--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,28 +10,21 @@
 * {
     font-family: 'Inter', sans-serif;
     margin: 0;
+    box-sizing: border-box;
     
 }
 .card {
-    padding: 5% 0 5% 0;
-    background-color: black;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
+    background: url('../img/main_bg.png') center center/cover no-repeat ;
     
 }
 .container {
-    width: 90%;
+    max-width: 1680px;
     margin: 0 auto;
     display: grid;
+    padding: 5%;
     grid-template: repeat(1,minmax(635px, auto) ) / repeat(3, 1fr);
     column-gap: 3%;
-    &__inner {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between
-    }
+    transition: 1s all;
 }   
  
 @import 'blocks/media';
