--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,4 +1,4 @@
-@media (min-width: 1201px) and (max-width: 1430px)  {
+@media (min-width: 1201px) {
     .title {
         font-size: 63px;
         line-height: 70px;
